semantic tags corrected

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@ body {
   font-family: "Inter";
   font-style: normal;
 }
-.top-header {
+header {
   background-color: white;
   position: sticky;
   top: 0;
@@ -18,22 +18,22 @@ body {
   align-items: center;
 }
 
-.top-header .name {
+header .name {
   font-size: 26px;
 }
 
-.nav ul {
+nav ul {
   display: flex;
   list-style-type: none;
   font-size: 14px;
   margin-bottom: 0;
 }
 
-.nav li {
+nav li {
   padding-inline: 10px;
 }
 
-.nav a {
+nav a {
   text-decoration: none;
   color: #000;
 }
@@ -188,7 +188,7 @@ body {
   z-index: 1;
 }
 
-#contact {
+footer {
   margin: auto;
   background-color: #d8d3a8;
   position: relative;
@@ -196,7 +196,7 @@ body {
   padding-block: 100px;
 }
 
-#contact .container {
+footer .container {
   display: flex;
 }
 .picture.right::before {
@@ -246,7 +246,7 @@ input[type="submit"] {
     flex: 2;
   }
   #about,
-  #contact .container {
+  footer .container {
     align-items: center;
   }
   .about-me__title {
@@ -301,10 +301,10 @@ input[type="submit"] {
     z-index: 0;
   }
 
-  #contact .container {
+  footer .container {
     flex-direction: column;
   }
-  #contact .picture.right {
+  footer .picture.right {
     margin-top: 1em;
   }
   .picture.right::before {
@@ -318,16 +318,16 @@ input[type="submit"] {
 }
 
 @media all and (max-width: 650px) {
-  .top-header {
+  header {
     flex-direction: column;
     padding-inline: 0;
   }
-  .top-header .nav,
-  .top-header .nav ul {
+  header .nav,
+  header .nav ul {
     width: 100%;
     padding: 0 0 0 0;
   }
-  .top-header .nav li {
+  header .nav li {
     flex: 1;
     padding-block: 1em;
     text-align: center;
@@ -343,7 +343,7 @@ input[type="submit"] {
     max-width: 90%;
   }
   #about,
-  #contact {
+  footer {
     padding-inline: 2em;
     padding-block: 2em;
   }
