--- a/assets/style.css
+++ b/assets/style.css
@@ -1,76 +1,99 @@
+.nav-pills .nav-link,
+nav a {
+  color: #000;
+}
+.about-me__introduction,
+.quote,
+.quote__text {
+  font-style: italic;
+  font-family: Spectral;
+}
+.quote,
+.quote__author,
+.quote__text {
+  font-family: Spectral;
+}
+.service,
+header {
+  background-color: #fff;
+  display: flex;
+}
+#about,
+footer {
+  position: relative;
+  padding-inline: 100px;
+  padding-block: 100px;
+}
+.picture.left::before,
+.picture.right::before {
+  content: " ";
+  width: 374px;
+  height: 329px;
+  bottom: 0;
+  z-index: -1;
+}
+#about,
+.mg-next,
+.mg-prev,
+.service,
+footer .container,
+form,
+header,
+nav ul {
+  display: flex;
+}
 body {
   max-width: 1920px;
   margin: auto;
 }
 * {
-  font-family: "Inter";
+  font-family: Inter;
   font-style: normal;
 }
 header {
-  background-color: white;
   position: sticky;
   top: 0;
   z-index: 1000;
-  display: flex;
   justify-content: space-between;
   padding-inline: 100px;
   padding-block: 30px;
   align-items: center;
 }
-
 header .name {
   font-size: 26px;
 }
-
 nav ul {
-  display: flex;
   list-style-type: none;
   font-size: 14px;
   margin-bottom: 0;
 }
-
 nav li {
   padding-inline: 10px;
 }
-
 nav a {
   text-decoration: none;
-  color: #000;
 }
-
 .social-link img {
   width: 20px;
 }
-
 #about {
-  display: flex;
   background-color: #f6d2b8;
-  padding-inline: 100px;
-  padding-block: 100px;
-  position: relative;
 }
-
 .picture.left::before {
-  content: " ";
   background-color: #e5975f;
-  width: 374px;
-  height: 329px;
   position: absolute;
-  bottom: 0;
   left: 0;
-  z-index: -1;
 }
-
 .picture {
   flex: 1;
   margin: 0 20px;
   z-index: 0;
 }
-
 .picture img {
   width: 100%;
 }
-#about-me {
+#about-me,
+.form-container {
   flex: 2;
 }
 .about-me__title {
@@ -79,16 +102,13 @@ nav a {
   font-size: 30px;
 }
 .about-me__introduction {
-  font-family: "Spectral";
   font-weight: 800;
-  font-style: italic;
   width: 60%;
 }
 #about-me p {
   width: 80%;
   font-size: 14px;
 }
-
 #gallery {
   min-height: 100vh;
 }
@@ -105,13 +125,15 @@ nav a {
   background-color: #beb45a;
   border-radius: 0;
 }
-.nav-pills .nav-link {
-  color: #000;
-}
 .item-column {
   position: relative;
   margin-bottom: 0 !important;
   padding: 0;
+}
+#services,
+.quote,
+footer {
+  margin: auto;
 }
 .item-column::after {
   content: "";
@@ -125,37 +147,34 @@ nav a {
   object-fit: cover;
   padding: 0.5em;
 }
-.mg-prev,
-.mg-next {
+.mg-next,
+.mg-prev {
   width: 30px;
   height: 30px;
   border-radius: 00%;
   justify-content: center;
   align-items: center;
-  display: flex;
   font-size: 24px;
 }
-
+form input,
+form textarea {
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid;
+  margin-bottom: 20px;
+}
 .quote {
-  font-family: "Spectral";
-  font-style: italic;
   width: 70%;
-  margin: auto;
   padding-block: 3em;
 }
 .quote__text {
-  font-family: Spectral;
-  font-style: italic;
   font-weight: 300;
 }
 .quote__author {
-  font-family: Spectral;
   font-weight: 800;
   font-size: 22px;
 }
-
 #services {
-  margin: auto;
   background-color: #a8d5d8;
   position: relative;
 }
@@ -169,78 +188,45 @@ nav a {
   left: 0;
   z-index: 0;
 }
-
 #services .container {
   justify-content: space-between;
   display: flex;
   padding: 2em 0;
 }
-
 .service {
-  background-color: white;
   max-width: 390px;
   width: 30%;
   height: 337px;
   padding: 1em;
-  display: flex;
   flex-direction: column;
   justify-content: space-between;
   z-index: 1;
 }
-
 footer {
-  margin: auto;
   background-color: #d8d3a8;
-  position: relative;
-  padding-inline: 100px;
-  padding-block: 100px;
-}
-
-footer .container {
-  display: flex;
 }
 .picture.right::before {
-  content: " ";
   background-color: #beb45a;
-  width: 374px;
-  height: 329px;
   position: absolute;
-  bottom: 0;
   right: 0;
-  z-index: -1;
-}
-.form-container {
-  flex: 2;
 }
 form {
-  display: flex;
   flex-direction: column;
   width: 70%;
   align-items: flex-start;
 }
-
 form input {
-  width: 100%;
-  background-color: transparent;
-  border: solid 1px;
   height: 2.5em;
-  margin-bottom: 20px;
 }
-
 form textarea {
-  width: 100%;
-  background-color: transparent;
-  border: solid 1px;
   height: 5em;
   line-height: 2.5em;
   font-size: 1.2em;
-  margin-bottom: 20px;
 }
 input[type="submit"] {
   background-color: #beb45a;
   padding: 0.5em 1em;
 }
-
 @media all and (max-width: 1180px) {
   .picture {
     flex: 2;
@@ -258,29 +244,30 @@ input[type="submit"] {
     width: 100%;
   }
 }
-
 @media all and (max-width: 1000px) {
-  #about {
+  .picture.left::before,
+  .picture.right::before {
+    height: 30%;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+  }
+  #about,
+  #services .container,
+  footer .container {
     flex-direction: column;
   }
   .picture {
     width: 50%;
   }
   .picture.left::before {
-    width: 100%;
-    height: 30%;
-    position: absolute;
     bottom: auto;
     top: 0;
     left: 0;
-    z-index: -1;
   }
   .about-me__title {
     text-align: center;
     margin-top: 1em;
-  }
-  #services .container {
-    flex-direction: column;
   }
   .service {
     width: 100%;
@@ -291,7 +278,6 @@ input[type="submit"] {
   .service__description {
     margin-bottom: 1em;
   }
-
   #services .container::before {
     width: 30%;
     height: 100%;
@@ -300,23 +286,14 @@ input[type="submit"] {
     left: auto;
     z-index: 0;
   }
-
-  footer .container {
-    flex-direction: column;
-  }
   footer .picture.right {
     margin-top: 1em;
   }
   .picture.right::before {
-    width: 100%;
-    height: 30%;
-    position: absolute;
     bottom: 0;
     right: 0;
-    z-index: -1;
   }
 }
-
 @media all and (max-width: 650px) {
   header {
     flex-direction: column;
@@ -325,7 +302,7 @@ input[type="submit"] {
   header .nav,
   header .nav ul {
     width: 100%;
-    padding: 0 0 0 0;
+    padding: 0;
   }
   header .nav li {
     flex: 1;
