--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,6 @@
+img {
+  object-fit: cover;
+}
 .nav-pills .nav-link,
 nav a {
   color: #000;
@@ -99,12 +102,13 @@ nav a {
 }
 .about-me__title {
   margin-top: 1em;
-  margin-bottom: 60px;
+  margin-bottom: 30px;
   font-size: 30px;
 }
 .about-me__introduction {
-  font-weight: 800;
+  font-weight: 600;
   width: 60%;
+  margin-bottom: 30px;
 }
 #about-me p {
   width: 80%;
