--- a/assets/style.css
+++ b/assets/style.css
@@ -336,3 +336,18 @@ input[type="submit"] {
     width: 80%;
   }
 }
+
+.modal-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.lightboxImage {
+  max-width: 100%;
+  max-height: 70vh;
+  object-fit: cover;
+  display: block;
+  margin: auto;
+}
